# dron_px4_ros2_docker

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  tmux_control.md
.devcontainer/: devcontainer.json
config/: pid.yaml
docker/: Dockerfile  Dockerfile.qgroundcontrol  Dockerfile.ros_px4  docker-compose.yml
docker/reserv/: Dockerfile.ros_px4  docker-compose.yml
docs/: check_list.md  commands.md  control.md  intro.md  main_algorim.md  nav_state.md  px4.md
launch/: aerial_drone_base.py  display_rviz.py
px4/: 4001_gz_x500  4012_gz_custom_model_base
px4/custom_model_base/: model.config  model.sdf
rviz/: base.rviz  visualize.rviz
scripts/: control.py  data_save.py  inform_node.py  processes.py  velocity_control.py  visualizer.py
src/: dron_base.cpp
urdf/: all.xacro  common_macro.xacro  dron_base.xacro  model.urdf  motor.xacro
